--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <div class="row g-3">
         <div class="col-md-6">
           <div class="pin-generator half-width">
-            <input class="form-control" type="text" />
-            <button class="generate-btn">Generate Pin</button>
+            <input class="form-control text-dark" type="text" id="generated-input" disabled />
+            <button class="generate-btn" id="generate-btn">Generate Pin</button>
           </div>
         </div>
         <div class="col-md-6">
           <div class="input-section half-width">
-            <input class="form-control" type="text" />
+            <input class="form-control" type="text" id="typed-input" />
             <div class="numbers">
-              <div class="calc-body">
+              <div class="calc-body" id="number-pad">
                 <div class="calc-button-row">
                   <div class="button">7</div>
                   <div class="button">8</div>
@@ -42,7 +42,7 @@
                   <div class="button">C</div>
                 </div>
                 <div>
-                  <button type="submit" class="submit-btn">Submit</button>
+                  <button type="submit" class="submit-btn" id="submit-btn">Submit</button>
                   <p class="action-left">3 try left</p>
                 </div>
               </div>
@@ -50,10 +50,14 @@
           </div>
         </div>
         <div class="notify-section">
-          <p class="notify">❌ Pin Didn't Match, Please try again</p>
-          <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+          <p class="notify d-none" id="error-msg">❌ Pin Didn't Match, Please try again</p>
+          <p class="notify d-none" id="success-msg">✅ Pin Matched... Secret door is opening for you</p>
         </div>
       </div>
     </div>
+
+    <!-- My custom js -->
+    <script src="./js/utilities.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
